--- a/.drone.yml
+++ b/.drone.yml
@@ -15,5 +15,5 @@ steps:
   - apt-get update
   - apt-get install -y coreutils make gnutls-bin nodejs npm emacs26
   - emacs --version
-  - emacs -Q --batch --eval "(require 'package)" --eval "(setq package-archives '((\"melpa\" . \"https://melpa.org/packages/\")))" --funcall package-initialize --funcall package-refresh-contents --eval "(package-install 'package-lint)" --eval "(package-install 'buttercup)"
+  - emacs -Q --batch --eval "(require 'package)" --eval "(setq package-archives '((\"melpa\" . \"https://melpa.org/packages/\") (\"gnu\" . \"https://elpa.gnu.org/packages/\")))" --funcall package-initialize --funcall package-refresh-contents --eval "(package-install 'package-lint)" --eval "(package-install 'buttercup)"
   - cd test && bash ./run-tests.sh
