--- a/.drone.yml
+++ b/.drone.yml
@@ -13,7 +13,7 @@ steps:
   - apt-get install -y software-properties-common
   - add-apt-repository ppa:kelleyk/emacs -y
   - apt-get update
-  - apt-get install -y coreutils make gnutls-bin nodejs npm emacs26
+  - apt-get install -y coreutils make gnutls-bin emacs26
   - emacs --version
   - emacs -Q --batch --eval "(require 'package)" --eval "(setq package-archives '((\"melpa\" . \"https://melpa.org/packages/\") (\"gnu\" . \"https://elpa.gnu.org/packages/\")))" --funcall package-initialize --funcall package-refresh-contents --eval "(package-install 'package-lint)" --eval "(package-install 'buttercup)"
   - cd test && bash ./run-tests.sh
